--- a/app/src/main/res/layout/left_menu.xml
+++ b/app/src/main/res/layout/left_menu.xml
@@ -5,5 +5,12 @@
              android:background="@android:color/black"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
+    <ListView
+        android:id="@+id/lv_menu"
+        android:paddingLeft="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </ListView>
 
 </FrameLayout>
